--- a/no3.html
+++ b/no3.html
@@ -26,7 +26,7 @@
 
         <div class="btn">
             <a href="yes.html">Yes</a>
-            <a href="no2.html" id="noButton">No</a>
+            <a href="" id="noButton">No</a>
         </div>
     </div>
 
