--- a/no3.html
+++ b/no3.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -31,7 +31,7 @@
     </div>
 
     <script>
-        document.getElementById("noButton").addEventListener("mouseover", function () {
+        document.getElementById("noButton").addEventListener("click", function () {
             const button = this;
             const newX = Math.random() * (window.innerWidth - button.clientWidth);
             const newY = Math.random() * (window.innerHeight - button.clientHeight);
