--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="./style.css"/>
        
     <body>
+        <audio autoplay loop hidden>
+        <source src="https://open.spotify.com/track/6cx5CvFhqN19efStehJqoW?si=98be8d841bf0456a" type="audio/mpeg">
+    </audio>
         <div class="container">
             <div class="tenor-gif-embed"
             data-postid="26864913" 
