--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        
     <body>
         <audio autoplay loop hidden>
-        <source src="https://open.spotify.com/track/6cx5CvFhqN19efStehJqoW?si=98be8d841bf0456a" type="audio/mpeg">
+        <source src="https://github.com/SecretValentine/Valentine/raw/main/wavedancer.co.za%20-%20Laufey%20-%20Valentine%20(Official%20Audio).mp3" type="audio/mpeg">
     </audio>
         <div class="container">
             <div class="tenor-gif-embed"
