--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        
     <body>
         <audio autoplay loop hidden>
-        <source src="https://github.com/SecretValentine/Valentine/raw/main/wavedancer.co.za%20-%20Laufey%20-%20Valentine%20(Official%20Audio).mp3" type="audio/mpeg">
+        <source src="https://github.com/SecretValentine/Valentine/raw/main/Laufey%20-%20Valentine%20(Official%20Audio)%20%5BtyKu0uZS86Q%5D.mp3" type="audio/mpeg">
     </audio>
         <div class="container">
             <div class="tenor-gif-embed"
