--- a/no2.html
+++ b/no2.html
@@ -1,9 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport"
-          content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Valentine</title>
 
     <link rel="stylesheet" href="./style.css" />
@@ -12,12 +11,12 @@
    
     <div class="Container">
         <div class="tenor-gif-embed"
-             data-postid="17528555114691940333"
+             data-postid="14044845879195818698"
              data-share-method="host"
-             data-aspect-ratio="0.917671"
+             data-aspect-ratio="1.44521"
              data-width="100%">
-            <a href="https://tenor.com/view/scared-cat-gif-17528555114691940333">Scared Cat GIF</a> from
-            <a href="https://tenor.com/search/scared+cat-gifs">Scared Cat GIFs</a>
+            <a href="https://tenor.com/view/sad-gif-14044845879195818698">Sad Meme</a> from
+            <a href="https://tenor.com/search/sad-memes">Sad Memes</a>
         </div>
 
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
