--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class="container">
         <div class="tenor-gif-embed"
-            data-postid="26864913" 
+            data-postid="24105461" 
             data-share-method="host" 
-            data-aspect-ratio="1.26482" 
+            data-aspect-ratio="0.875" 
             data-width="100%">
             
-            <a href="https://tenor.com/view/peach-and-goma-goma-flower-offer-flower-gif-26864913">Peach And Goma Goma Sticker</a> from 
-            <a href="https://tenor.com/search/peach+and+goma-stickers">Peach And Goma Stickers</a>
+            <a href="https://tenor.com/view/peach-goma-love-peachcute-and-gif-24105461">Peach Goma GIF</a> from 
+            <a href="https://tenor.com/search/peach-gifs">Peach GIFs</a>
         </div> 
         
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
